# openassets-tapyrus

./: Cargo.toml
src/: lib.rs
src/openassets/: address.rs  asset_id.rs  marker_output.rs
