[package]
name = "openassets-tapyrus"
version = "0.3.0"
edition = "2024"
authors = ["azuchi <azuchi@chaintope.com>"]
license = "MIT"
description = "The implementation of the Open Assets Protocol for Rust."
repository = "https://github.com/chaintope/openassets-tapyrus"
readme = "README.md"
keywords = ["openassets", "bitcoin", "tapyrus"]

[dependencies]
tapyrus = { version = "^0.5.0", features = ["use-serde"]}
leb128 = "0.2"
byteorder = "1.3"
serde = { version = "1.0"}
serde_json = "1.0"
hex = "0.4"
